# prometheus-configurator

./: Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: main.yaml
prometheus_configurator/: __init__.py
yamlmerge/: __init__.py  settings.py
