[tool.poetry]
name = "yamlmerge"
version = "0.0.0"
description = "Merges multiple YAML files into a single file"
authors = ["Chris Pressland <mail@cpressland.io>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "yamlmerge" }
]

[tool.poetry.scripts]
yamlmerge = "yamlmerge:main"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
pydantic = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
Flake8-pyproject = "^1.1.0.post0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry-dynamic-versioning]
enable = true
